# fastapi-graphql-template

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
